# grpc-example

./: .gitattributes  .gitignore
docker/: docker-compose.yml
libraries/grpc/: pyproject.toml
libraries/grpc/src/ns/grpc/protobufs/lang_detection/: lang-detection.proto  lang_detection_pb2.py  lang_detection_pb2_grpc.py
libraries/logging/: pyproject.toml
libraries/logging/src/ns/logging/: config.py
libraries/logging/src/ns/logging/formatters/: tracing.py
services/api/: Dockerfile  pyproject.toml
services/api/src/: gunicorn.config.py  main.py
services/model_machine/: Dockerfile  pyproject.toml
services/model_machine/src/: main.py
